--- a/package.json
+++ b/package.json
@@ -82,7 +82,6 @@
     "yargs": "^17.7.2"
   },
   "dependencies": {
-    "@superviz/socket-client": "1.8.2",
     "bowser": "^2.11.0",
     "bowser-jr": "^1.0.6",
     "debug": "^4.3.4",
@@ -92,7 +91,9 @@
     "lodash.isequal": "^4.5.0",
     "luxon": "^3.4.4",
     "rxjs": "^7.8.1",
-    "semantic-release-version-file": "^1.0.2"
+    "semantic-release-version-file": "^1.0.2",
+    "socket.io-client": "^4.7.5",
+    "zod": "^3.23.8"
   },
   "config": {
     "commitizen": {
